added a new file

--- a/work with imgs in directory.ipynb
+++ b/work with imgs in directory.ipynb
@@ -34,6 +34,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if not os.path.exists('updated_images'):\n",
+    "    print(\"New directory created\")\n",
+    "    os.makedirs('updated_images')\n",
+    "    \n",
+    "    \n",
+    "for file in os.listdir(base_dir + 'images'):\n",
+    "    file_name, file_extension = os.path.splitext(file)\n",
+    "    if (file_extension in ['.png','.jpg']):\n",
+    "    print(\"Image path: {}\".format(base_dir + 'images/' + file))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for k in range(1,1001):\n",
     "    img = cv2.imread(\"{id}.png\".format(id=k))\n",
     "    process_image(img)"
