--- a/cv_tutorial.ipynb
+++ b/cv_tutorial.ipynb
@@ -23,7 +23,28 @@
     "# for open image \n",
     "cv2.imshow(\"some_name_for_window\", img)\n",
     "cv2.waitKey(0)  # time , if 0 - for close push any button ,if 5000 = 5 seconds\n",
-    "cv2.destroyAllWindows()\n"
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy\n",
+    "\n",
+    "\n",
+    "img = cv2.imread(\"file_name.jpg\", 1)  # 1 - in RGB , 0 - in grayscale , -1 - in alpha channel (transparency)\n",
+    "cv2.imshow(\"some_name_for_window\", img)\n",
+    "k = cv2.waitKey(0)\n",
+    "\n",
+    "if k == 27:  # 27 its a escape button ( ESC )\n",
+    "    cv2.destroyAllWindows()\n",
+    "elif k == ord('s'):  # need press 's' button fo write img\n",
+    "    cv2.imwrite(\"new_name.jpg\", img)\n",
+    "    cv2.destroyAllWindows()"
    ]
   },
   {
