--- a/cv_tutorial.ipynb
+++ b/cv_tutorial.ipynb
@@ -6,6 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#  wery important !!!!!\n",
+    "#  If you are using a 64-bit machine, you will have to modify k = cv.waitKey(0) line as follows : k = cv.waitKey(0) & 0xFF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# pip install opencv-python\n",
     "import cv2\n",
     "\n",
@@ -22,6 +32,7 @@
     "\n",
     "# for open image \n",
     "cv2.imshow(\"some_name_for_window\", img)\n",
+    "# k = cv.waitKey(0) & 0xFF   for 64-bit machines\n",
     "cv2.waitKey(0)  # time , if 0 - for close push any button ,if 5000 = 5 seconds\n",
     "cv2.destroyAllWindows()"
    ]
