--- a/cv_tutorial.ipynb
+++ b/cv_tutorial.ipynb
@@ -163,6 +163,29 @@
     "  \n",
     "print('Successfully saved') "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  using Matplotlib\n",
+    "\n",
+    "import numpy as np\n",
+    "import cv2 as cv\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "\n",
+    "img = cv.imread('image.jpg', 0)\n",
+    "plt.imshow(img, cmap = 'gray', interpolation = 'bicubic')\n",
+    "plt.xticks([]), plt.yticks([])  # to hide tick values on X and Y axis\n",
+    "plt.show()\n",
+    "\n",
+    "# IMPORTANT !!!\n",
+    "# Color image loaded by OpenCV is in BGR mode. But Matplotlib displays in RGB mode.\n",
+    "# So color images will not be displayed correctly in Matplotlib if image is read with OpenCV."
+   ]
   }
  ],
  "metadata": {
